--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
               <img src="assets/images/Profile.jpg">
             </figure>
           </div>
-          <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
+          <!-- <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
             <section>
                 <h1>
                   <span>HI THERE</span>
-                  I’m Jason Stroff <br> UI/UX DESIGNER + DEVELOPER based in Florida.
+                  I’m Devanshee Solanki <br> UI/UX DESIGNER + DEVELOPER based in India.
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
-                    <strong>6+</strong>
+                    <strong>3+</strong>
                     <span>Experience</span>
                   </li>
                   <li>
@@ -72,7 +72,7 @@
                   </li>
                 </ul>
             </section>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis interdum ante a porta blandit. Quisque velit tortor, ultricies in quam ut, luctus convallis metus. Nunc vitae felis rutrum, mattis justo quis, bibendum tellus. Integer bibendum eget dolor nec venenatis. Aliquam erat volutpat. Etiam et est vitae turpis accumsan vulputate. Curabitur et vehicula nisl, eu congue dolor. Vivamus nec hendrerit mi Nulla consequat tempor.</p>
+            <p>A software enthusiast, navigating the digital landscape with a quiet curiosity. My passion lies in crafting efficient solutions and exploring the endless possibilities of code. Let's connect and bring ideas to life through the power of programming.</p>
             <div class="ds-button-sec text-center">
                 <a href="#" class="ds-button">Download Resume</a>
             </div>
@@ -100,12 +100,12 @@
              <h2 class="ds-heading">Core Skills</h2>
              <ul class="ds-skills-list">
                <li>JavaScript</li>
-               <li>Node.js</li>
-               <li>Express.js</li>
-               <li>MongoDB</li>
+               <li>Angular</li>
+               <li>C#</li>
+               <li>MySQL</li>
                <li>Vue.js</li>
                <li>React</li>
-               <li>Sequelize</li>
+               <li>Asp.Net</li>
                <li>Github</li>
                <li>HTML</li>
              </ul>
