--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
               <img src="assets/images/Profile.jpg">
             </figure>
           </div>
-          <!-- <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
+           <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
             <section>
                 <h1>
                   <span>HI THERE</span>
                   I’m Devanshee Solanki <br> UI/UX DESIGNER + DEVELOPER based in India.
                 </h1>
-                <ul class="ds-numbervalulist">
+                <!-- <ul class="ds-numbervalulist">
                   <li>
                     <strong>3+</strong>
                     <span>Experience</span>
@@ -70,9 +70,9 @@
                     <strong>52</strong>
                     <span>Happy Clients</span>
                   </li>
-                </ul>
+                </ul> -->
             </section>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
